@@ -110,6 +110,8 @@ Enhancements from 1.2
 - FileUtils.writeByteArrayToFile
 - FileUtils.writeLines
   - enhanced to create parent directories if required
+- FileUtils.openInputStream  [IO-107]
+  - new method to open a FileInputStream, providing better error messages than the JDK
 
 - FileUtils.isFileOlder
   - new methods to check if a file is older (i.e. isFileOlder()) - counterparts
